sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/NCA_WATRS_Contact__c.object-meta.xml
<CustomObject>
    <description>Extension object for the NCA WATRS program that holds custom contact fields.</description>
    <label>NCA WATRS Contact</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCA WATRS Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>