sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/fields/AMAS_ID__c.field-meta.xml
<CustomField>
    <fullName>AMAS_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>AMAS ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>