sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/fields/NCA_Office_Location__c.field-meta.xml
<CustomField>
    <fullName>NCA_Office_Location__c</fullName>
    <label>NCA Office Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCA_WATRS_Site_Locations</valueSetName>
    </valueSet>
</CustomField>