sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/fields/NCA_WATRS_Director__c.field-meta.xml
<CustomField>
    <fullName>NCA_WATRS_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>NCA WATRS Contacts (Director)</relationshipLabel>
    <relationshipName>NCA_WATRS_Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>