sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/fields/NCA_WATRS_Employee_Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>NCA_WATRS_Employee_Grade_Level__c</fullName>
    <label>Employee Grade Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCA_WATRS_Grade_Level</valueSetName>
    </valueSet>
</CustomField>