sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/fields/NCA_WATRS_Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>NCA_WATRS_Employee_Type__c</fullName>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCA_WATRS_Employee_Type</valueSetName>
    </valueSet>
</CustomField>