sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/fields/NCA_WATRS_Performance_Standard__c.field-meta.xml
<CustomField>
    <fullName>NCA_WATRS_Performance_Standard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Standard</label>
    <referenceTo>NCA_Performance_Standard__c</referenceTo>
    <relationshipLabel>NCA WATRS Contacts</relationshipLabel>
    <relationshipName>NCA_WATRS_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>