sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/fields/NCA_WATRS_Related_User__c.field-meta.xml
<CustomField>
    <fullName>NCA_WATRS_Related_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCA_WATRS_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>