sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/fields/NCA_WATRS_Site_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>NCA_WATRS_Site_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCA_WATRS_Contacts3</relationshipName>
    <type>Lookup</type>
</CustomField>