sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/fields/NCA_WATRS_Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>NCA_WATRS_Team_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCA_WATRS_Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>