sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>NCA WATRS Contacts</relationshipLabel>
    <relationshipName>NCA_WATRS_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>