sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NCA WATRS Contacts</relationshipLabel>
    <relationshipName>NCA_WATRS_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>