sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/fields/Send_Update_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Update_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Update Email</label>
    <type>Checkbox</type>
</CustomField>