sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/fields/Tour_of_Duty__c.field-meta.xml
<CustomField>
    <fullName>Tour_of_Duty__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tour of Duty</label>
    <length>50</length>
    <type>Text</type>
</CustomField>