sfdx-source/nca-watrs/main/objects/NCA_WATRS_Contact__c/listViews/All_NCA_WATRS_Contacts.listView-meta.xml
<ListView>
    <fullName>All_NCA_WATRS_Contacts</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All NCA WATRS Contacts</label>
</ListView>